--- a/deploy/kubernetes/manifests-logging/elasticsearch.yml
+++ b/deploy/kubernetes/manifests-logging/elasticsearch.yml
@@ -17,8 +17,11 @@ spec:
         name: elasticsearch
     spec:
       containers:
-       - image: elasticsearch
+       - image: elasticsearch:7.12.1
          name: elasticsearch
+         env:
+          - name: discovery.type
+            value: 'single-node'
          ports:
           - name: elasticsearch
             containerPort: 9200
