--- a/deploy/kubernetes/manifests/01-carts-dep.yaml
+++ b/deploy/kubernetes/manifests/01-carts-dep.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: carts
-        image: azamikram22/carts:latest
+        image: weaveworksdemos/carts:0.4.8
         env:
          - name: JAVA_OPTS
            value: -Xms64m -Xmx128m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
