--- a/deploy/kubernetes/manifests/11-orders-dep.yaml
+++ b/deploy/kubernetes/manifests/11-orders-dep.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: orders
-        image: azamikram22/orders:latest
+        image: weaveworksdemos/orders:0.4.7
         env:
          - name: JAVA_OPTS
            value: -Xms64m -Xmx128m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
