fix carts-db deployment

--- a/deploy/kubernetes/manifests/sock-shop-uDevOps.yml
+++ b/deploy/kubernetes/manifests/sock-shop-uDevOps.yml
@@ -12,6 +12,9 @@ metadata:
   namespace: sock-shop
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      name: carts-db
   template:
     metadata:
       labels:
