--- a/deploy/docker-compose/prometheus.yml
+++ b/deploy/docker-compose/prometheus.yml
@@ -71,3 +71,15 @@ scrape_configs:
       metrics_path: 'metrics'
       static_configs:
         - targets: ['nodeexporter:9100']
+
+    - job_name: power_consumption
+      scrape_interval: 5s
+      metrics_path: 'metrics'
+      static_configs:
+        - targets: ['145.108.225.16:9999']
+    
+    - job_name: 'cadvisor'
+      scrape_interval: 5s
+      metrics_path: 'metrics'
+      static_configs:
+        - targets: ['145.108.225.16:8082']
